Remove the batched perf work now split into standalone PRs
Keep this branch to the columnar variant storage and the variant hot-path it
builds on; the unrelated micro-optimizations that were batched in the base PR
now live in their own PRs from main (#38-#48).